// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1000"
    />
  </div>
</div>
`;

exports[`2. default layout without uri 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src={null}
    />
  </div>
</div>
`;

exports[`3. default layout without aspect ratio 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0"
    />
  </div>
</div>
`;

exports[`4. rounded image 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800"
    />
  </div>
</div>
`;

exports[`5. with existing url params 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src="https://image.io?resize=1400"
    />
  </div>
</div>
`;

exports[`6. with disabled placeholder 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  display: block;
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      loading="lazy"
      src="https://image.io?resize=1400"
    />
  </div>
</div>
`;
